Chain the two classes together

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <p class="first-class">Click Me!</p>
-        <p class="second-class">No, Click Me!</p>
+        <div class="second-class">No, Click Me!</div>
     </body>
 </html>
