Turn the index body into buttons

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <p class="first-class">Click Me!</p>
-        <div class="second-class">No, Click Me!</div>
+        <button class="first-class">Click Me!</button>
+        <button class="second-class">No, Click Me!</button>
     </body>
 </html>
